crates/shared/typed-fields/tests/ui/processing_id_unchecked_from.stderr
error[E0308]: mismatched types
 --> tests/ui/processing_id_unchecked_from.rs:4:32
  |
4 |     let _ = ProcessingId::from(" ");
  |             ------------------ ^^^ expected `ProcessingId`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/convert/mod.rs
  |
  |     fn from(value: T) -> Self;
  |        ^^^^
