crates/shared/typed-fields/tests/ui/processing_id_unchecked_from.rs
use docnav_typed_fields::ProcessingId;

fn main() {
    let _ = ProcessingId::from(" ");
}
